# ultimate-devops-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  Makefile  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.dvc/: config
.github/: pull_request_template.md
.github/workflows/: ci.yml
Project-Guide/: COMPLETE-GUIDE-PART1.md  COMPLETE-GUIDE-PART2.md  COMPLETE-GUIDE-PART3.md  PROJECT-MASTER-PLAN.md  README.md  WEEK-01-04-IMPLEMENTATION.md  WEEK-05-08-IMPLEMENTATION.md  WEEK-09-12-IMPLEMENTATION.md  WEEK-13-16-IMPLEMENTATION.md  WEEK-17-20-IMPLEMENTATION.md
ansible/inventory/: hosts.yml
ansible/playbooks/: setup.yml
docs/: GIT-BRANCHING-STRATEGY.md
services/: README.md
