[tool.poetry]
name = "ultimate-devops-platform"
version = "0.1.0"
description = "Enterprise-scale multi-tenant SaaS e-commerce platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
redis = "^5.0.1"
celery = "^5.3.6"
pymongo = "^4.6.1"
motor = "^3.3.2"
elasticsearch = "^8.12.0"
kafka-python = "^2.0.2"
boto3 = "^1.34.34"
stripe = "^7.11.0"
httpx = "^0.26.0"
aiohttp = "^3.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
bandit = "^1.7.6"
pre-commit = "^3.6.0"

[tool.poetry.group.ml.dependencies]
tensorflow = "^2.15.0"
torch = "^2.1.2"
scikit-learn = "^1.4.0"
mlflow = "^2.9.2"
pandas = "^2.1.4"
numpy = "^1.26.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
